// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PredictedContactMap Should update points to plot when new data is provided. 1`] = `
Array [
  Object {
    "hoverinfo": "text",
    "marker": Object {
      "color": Array [
        "#000000",
        "#000000",
        "#000000",
        "#000000",
        "#000000",
        "#000000",
      ],
    },
    "mode": "lines+markers",
    "name": "Predicted Contact",
    "nodeSize": 4,
    "points": Array [
      Object {
        "dist": 1.3,
        "i": 41,
        "j": 52,
      },
      Object {
        "dist": 20.4,
        "i": 42,
        "j": 50,
      },
      Object {
        "dist": 2.4,
        "i": 56,
        "j": 50,
      },
    ],
    "subtitle": "(N=28, L=57)",
    "text": Array [
      "(41, 52)",
      "(42, 50)",
      "(56, 50)",
    ],
  },
  Object {
    "hoverinfo": "text",
    "marker": Object {
      "color": Array [
        "#ff0000",
        "#ff0000",
        "#ff0000",
        "#ff0000",
      ],
    },
    "mode": "lines+markers",
    "name": "Correct Prediction",
    "nodeSize": 6,
    "points": Array [
      Object {
        "dist": 1.3,
        "i": 41,
        "j": 52,
      },
      Object {
        "dist": 2.4,
        "i": 56,
        "j": 50,
      },
    ],
    "subtitle": "(N=2, 66.7%)",
    "text": Array [
      "(41, 52)",
      "(56, 50)",
    ],
  },
]
`;

exports[`PredictedContactMap Snapshots Should match existing snapshot when given empty data. 1`] = `
<div
  id="PredictedContactMapComponent"
  style={Object {}}
>
  <ContactMap
    configurations={
      Array [
        Object {
          "name": "Linear Distance Filter (|i - j|)",
          "onChange": [Function],
          "type": "SLIDER",
          "values": Object {
            "current": 5,
            "max": 10,
            "min": 1,
          },
        },
        Object {
          "name": "Top N Predictions to Show",
          "onChange": [Function],
          "type": "SLIDER",
          "values": Object {
            "current": 25,
            "max": 50,
            "min": 1,
          },
        },
      ]
    }
    correctColor="#ff0000"
    data={
      Object {
        "couplingScores": CouplingContainer {
          "colCounter": 0,
          "contacts": Array [],
          "getCouplingScore": [Function],
          "includes": [Function],
          "indexRange": Object {
            "max": 50,
            "min": 1,
          },
          "rowCounter": 0,
          "totalStoredContacts": 0,
        },
        "pdbData": undefined,
        "secondaryStructures": Array [],
      }
    }
    formattedPoints={
      Array [
        Object {
          "hoverinfo": "text",
          "marker": Object {
            "color": Array [],
          },
          "mode": "lines+markers",
          "name": "Predicted Contact",
          "nodeSize": 4,
          "points": Array [],
          "subtitle": "(N=25, L=50)",
          "text": Array [],
        },
        Object {
          "hoverinfo": "text",
          "marker": Object {
            "color": Array [],
          },
          "mode": "lines+markers",
          "name": "Correct Prediction",
          "nodeSize": 6,
          "points": Array [],
          "subtitle": "(N=0, NaN%)",
          "text": Array [],
        },
      ]
    }
    height={400}
    incorrectColor="#000000"
    isDataLoading={false}
    width={400}
  />
</div>
`;

exports[`PredictedContactMap Snapshots Should match existing snapshot when given no data. 1`] = `
<div
  id="PredictedContactMapComponent"
  style={Object {}}
>
  <ContactMap
    configurations={
      Array [
        Object {
          "name": "Linear Distance Filter (|i - j|)",
          "onChange": [Function],
          "type": "SLIDER",
          "values": Object {
            "current": 5,
            "max": 10,
            "min": 1,
          },
        },
        Object {
          "name": "Top N Predictions to Show",
          "onChange": [Function],
          "type": "SLIDER",
          "values": Object {
            "current": 25,
            "max": 50,
            "min": 1,
          },
        },
      ]
    }
    correctColor="#ff0000"
    data={
      Object {
        "couplingScores": CouplingContainer {
          "colCounter": 0,
          "contacts": Array [],
          "getCouplingScore": [Function],
          "includes": [Function],
          "indexRange": Object {
            "max": 50,
            "min": 1,
          },
          "rowCounter": 0,
          "totalStoredContacts": 0,
        },
        "pdbData": undefined,
        "secondaryStructures": Array [],
      }
    }
    formattedPoints={
      Array [
        Object {
          "hoverinfo": "text",
          "marker": Object {
            "color": Array [],
          },
          "mode": "lines+markers",
          "name": "Predicted Contact",
          "nodeSize": 4,
          "points": Array [],
          "subtitle": "(N=25, L=50)",
          "text": Array [],
        },
        Object {
          "hoverinfo": "text",
          "marker": Object {
            "color": Array [],
          },
          "mode": "lines+markers",
          "name": "Correct Prediction",
          "nodeSize": 6,
          "points": Array [],
          "subtitle": "(N=0, NaN%)",
          "text": Array [],
        },
      ]
    }
    height={400}
    incorrectColor="#000000"
    isDataLoading={false}
    width={400}
  />
</div>
`;

exports[`PredictedContactMap Snapshots Should match snapshot when locked residues are added. 1`] = `
<div
  id="PredictedContactMapComponent"
  style={Object {}}
>
  <ContactMap
    configurations={
      Array [
        Object {
          "name": "Linear Distance Filter (|i - j|)",
          "onChange": [Function],
          "type": "SLIDER",
          "values": Object {
            "current": 5,
            "max": 10,
            "min": 1,
          },
        },
        Object {
          "name": "Top N Predictions to Show",
          "onChange": [Function],
          "type": "SLIDER",
          "values": Object {
            "current": 25,
            "max": 50,
            "min": 1,
          },
        },
      ]
    }
    correctColor="#ff0000"
    data={
      Object {
        "couplingScores": CouplingContainer {
          "colCounter": 0,
          "contacts": Array [],
          "getCouplingScore": [Function],
          "includes": [Function],
          "indexRange": Object {
            "max": 50,
            "min": 1,
          },
          "rowCounter": 0,
          "totalStoredContacts": 0,
        },
        "pdbData": undefined,
        "secondaryStructures": Array [],
      }
    }
    formattedPoints={
      Array [
        Object {
          "hoverinfo": "text",
          "marker": Object {
            "color": Array [],
          },
          "mode": "lines+markers",
          "name": "Predicted Contact",
          "nodeSize": 4,
          "points": Array [],
          "subtitle": "(N=25, L=50)",
          "text": Array [],
        },
        Object {
          "hoverinfo": "text",
          "marker": Object {
            "color": Array [],
          },
          "mode": "lines+markers",
          "name": "Correct Prediction",
          "nodeSize": 6,
          "points": Array [],
          "subtitle": "(N=0, NaN%)",
          "text": Array [],
        },
      ]
    }
    height={400}
    incorrectColor="#000000"
    isDataLoading={false}
    lockedResiduePairs={
      Object {
        "37,46": Array [
          37,
          46,
        ],
        "8": Array [
          8,
        ],
      }
    }
    width={400}
  />
</div>
`;
